updated non-index pages and fixed a minor issue on iOS devices

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -133,11 +133,11 @@ p {
     #mobile-navigation-menu-header {
         width: 100%;
         display: flex;
-        justify-content: right;
     }
         #mobile-navigation-menu-header > .close-button {
             font-size: 2.8rem;
             padding: 8px 16px;
+            margin-left: auto;
         }
 
     #site-navigation-menu {
